backend/out.txt
    Blocking waiting for file lock on build directory
    Checking poool-backend v0.1.0 (/Users/martin/Projects/poool/backend)
warning: variable does not need to be mutable
    --> src/community/routes.rs:1580:9
     |
1580 |     let mut user = middleware::get_current_user(&jar, &state.db).await;
     |         ----^^^^
     |         |
     |         help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
    --> src/main.rs:2049:28
     |
2049 |                     if let Some(s) = first_img.as_str() {
     |                            ^^^^^^^   ------------------ this expression has type `&str`
     |                            |
     |                            expected `str`, found `Option<_>`
     |
     = note: expected type `str`
                found enum `std::option::Option<_>`

warning: unused import: `redis::AsyncCommands`
   --> src/community/user_bridge.rs:143:21
    |
143 |                 use redis::AsyncCommands;
    |                     ^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `is_completed` is never read
  --> src/community/challenges.rs:97:13
   |
97 |             is_completed = true;
   |             ^^^^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `only_following_user_id`
   --> src/community/routes.rs:197:9
    |
197 |     let only_following_user_id: Option<Uuid> = None; // not constrained by following
    |         ^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_only_following_user_id`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `user`
    --> src/community/routes.rs:1580:9
     |
1580 |     let mut user = middleware::get_current_user(&jar, &state.db).await;
     |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_user`

warning: unused variable: `q`
    --> src/community/routes.rs:2047:26
     |
2047 |     axum::extract::Query(q): axum::extract::Query<std::collections::HashMap<String, String>>,
     |                          ^ help: if this is intentional, prefix it with an underscore: `_q`

warning: unused variable: `core_pool`
  --> src/community/background.rs:18:42
   |
18 | async fn check_velocity(c_pool: &PgPool, core_pool: &PgPool) -> Result<(), crate::error::AppError> {
   |                                          ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_core_pool`

For more information about this error, try `rustc --explain E0308`.
warning: `poool-backend` (bin "poool-backend") generated 7 warnings
error: could not compile `poool-backend` (bin "poool-backend") due to 1 previous error; 7 warnings emitted
